version3/chapter6/sample-ingress-app/apps/infra/sample-ingress-by-nginx.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: sample-ingress-by-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  rules:
  - host: sample-example.com
    http:
      paths:
      - path: /path1/*
        backend:
          serviceName: sample-ingress-svc-1
          servicePort: 8888
      - path: /path2/*
        backend:
          serviceName: sample-ingress-svc-2
          servicePort: 8888
  backend:
    serviceName: sample-ingress-default
    servicePort: 8888
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
